--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,21 @@
-version: '3.2'
+"version: "3.2"
 
 services:
-  node:
-    image: node:16
-    volumes:
-      - type: volume
-        source: node_data
-        target: /var/lib/mysql
-    restart: always
+  web:
+    build: .
+    ports:
+      - "3000:3000"
     environment:
-      MYSQL_ROOT_PASSWORD: wordpress
-      MYSQL_DATABASE: wordpress
-      MYSQL_USER: wordpress
-      MYSQL_PASSWORD: wordpress
-volumes:
-  node_data:
+      - PORT=3000
+      - "REDIS_URL=redis://redis:6379/0"
+      - "MONGODB_URL=mongodb://mongo:27017/0"
+
+  mongo:
+    image: mongo
+    ports:
+      - "27017:27017"
+
+  redis:
+    image: redis
+    ports:
+      - "6379:6379"
