--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -13,5 +13,16 @@ services:
       POSTGRES_USER: monet
       POSTGRES_PASSWORD: monet
       POSTGRES_DB: monet
+  tomcat:
+    build: .
+    ports:
+      - "8080:8080"
+    restart: always
+    environment:
+      DRIVER_CLASS_NAME: org.postgresql.Driver
+      LOGIN: monet
+      PASSWORD: monet
+      URL: jdbc:postgresql://3.125.151.179:5432/monet
+
 volumes:
   db_data:
