--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -4,7 +4,8 @@ services:
   web:
     build: .
     ports:
-      - "3000:3000"
+      - "80:3000"
+    restart: always
     environment:
       - PORT=3000
       - "REDIS_URL=redis://redis:6379/0"
@@ -14,8 +15,10 @@ services:
     image: mongo
     ports:
       - "27017:27017"
+    restart: always
 
   redis:
     image: redis
     ports:
       - "6379:6379"
+    restart: always
