--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
-FROM tomcat:9.0.41-jdk11
-VOLUME /tmp/volume
-COPY fileshare.war /tmp/volume/
-ADD fileshare.war /usr/local/tomcat/webapps
-RUN mv /usr/local/tomcat/webapps/fileshare.war /usr/local/tomcat/webapps/ROOT.war
+FROM maven:3.8.4-eclipse-temurin-17 AS build
+COPY src /usr/src/app/src
+COPY pom.xml /usr/src/app
+RUN mvn -f /usr/src/app/pom.xml clean package
+
+FROM openjdk:17.0.2-oraclelinux7
+COPY --from=build /usr/src/app/target/fileshare-0.1.0.jar /usr/app/fileshare-0.$
 EXPOSE 8080
-CMD ["catalina.sh","run"]
+ENTRYPOINT ["java","-jar","/usr/app/fileshare-0.1.0.jar"]
