--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -5,20 +5,9 @@ services:
     build: .
     ports:
       - "80:3000"
-    restart: always
     environment:
       - PORT=3000
-      - "REDIS_URL=redis://redis:6379/0"
-      - "MONGODB_URL=mongodb://mongo:27017/0"
-
-  mongo:
-    image: mongo
+  frontback:
+    build: ./backend
     ports:
-      - "27017:27017"
-    restart: always
-
-  redis:
-    image: redis
-    ports:
-      - "6379:6379"
-    restart: always
+      - "4000:4000"
